# Hackathon_2_Phase_2_Evolution_of_Todo_T

./: PHASE2_COMPLETION_REPORT.md  README.md  fix_db.py
phase-1-console/: .gitignore  INTERACTIVE_MODE.md  QUICKSTART.md  README.md  main.py  pyproject.toml
phase-1-console/.claude/agents/: storage-agent.md  todo-analytics-agent.md  todo-manager.md  todo-operations.md  todo-scheduler.md
phase-1-console/.specify/memory/: constitution.md
phase-1-console/history/prompts/constitution/: 001-create-phase1-todo-constitution.constitution.prompt.md
phase-1-console/history/prompts/general/: 002-integration-architecture-specification.general.prompt.md  003-implementation-plan-creation.plan.prompt.md  004-implementation-tasks-checklist.tasks.prompt.md  (+1 more)
phase-1-console/skills/: add_skill.md  add_skill.py  complete_skill.md  complete_skill.py  delete_skill.md  delete_skill.py  list_skill.md  list_skill.py  scheduler_skill.md  scheduler_skill.py  update_skill.md  update_skill.py
phase-1-console/specs/integration/: README.md  architecture.md  main-cli-spec.md  models-spec.md  storage-spec.md
phase-1-console/specs/todo-app/: README.md  plan.md  tasks.md
phase-1-console/todo_app.egg-info/: PKG-INFO  SOURCES.txt
phase-1-console/utils/: __init__.py  models.py  storage.py
phase-2-web/: .coverage  .env  plan.md  (+19 more)
phase-2-web/backend/: .env  Dockerfile  auth.py  main.py  models.py  pyproject.toml
phase-2-web/backend/agents/: __init__.py  auth_orchestrator.py  task_orchestrator.py
phase-2-web/backend/skills/: __init__.py  auth_skill.py  db_crud_skill.py  validation_skill.py
(+66 files in other folders)
